--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from grid import *\n",
-    "from HLL import *\n",
-    "from rk import *\n",
+    "# from grid import *\n",
+    "# from HLL import *\n",
+    "# from rk import *\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.animation import FuncAnimation\n",
@@ -19,9 +19,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'grid' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/panos/Documents/NYU/6.Extracurricular/32.Astro/testing.ipynb Cell 2\u001b[0m in \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/panos/Documents/NYU/6.Extracurricular/32.Astro/testing.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m gamma       \u001b[39m=\u001b[39m \u001b[39m1.4\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/panos/Documents/NYU/6.Extracurricular/32.Astro/testing.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m dt          \u001b[39m=\u001b[39m \u001b[39m0.001\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/panos/Documents/NYU/6.Extracurricular/32.Astro/testing.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m U \u001b[39m=\u001b[39m grid(dim,n_points,n_vars)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/panos/Documents/NYU/6.Extracurricular/32.Astro/testing.ipynb#W1sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Set up initial conditions\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/panos/Documents/NYU/6.Extracurricular/32.Astro/testing.ipynb#W1sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# U[0][:n_points//2]  = 1.000\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/panos/Documents/NYU/6.Extracurricular/32.Astro/testing.ipynb#W1sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m# U[0][n_points//2:]  = 0.100\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/panos/Documents/NYU/6.Extracurricular/32.Astro/testing.ipynb#W1sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m# U[2][:n_points//2]  = 1.000/(gamma-1)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/panos/Documents/NYU/6.Extracurricular/32.Astro/testing.ipynb#W1sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# U[2][n_points//2:]  = 0.125/(gamma-1)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/panos/Documents/NYU/6.Extracurricular/32.Astro/testing.ipynb#W1sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreate_circular_mask\u001b[39m(h, w, center\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, radius\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'grid' is not defined"
+     ]
+    }
+   ],
    "source": [
     "n_points    = 100\n",
     "dim         = 2\n",
